@@ -1,0 +1,11 @@
+if GNOME_INSTALLED
+gnomeappicondir = $(GNOMEDATADIR)/pixmaps
+gnomeappicon_DATA = exult.png
+
+gnomeappdir = $(GNOMEDATADIR)/gnome/apps/Games
+gnomeapp_DATA = exult.desktop
+endif
+
+EXTRA_DIST = \
+	exult.png \
+	exult.desktop
